[package]
name = "nct3933"
version = "0.1.0"
edition = "2021"
author = "Adancurusul"
description = "Platform agnostic rust driver for Nuvoton 3-Channel Sink/Source Current DAC NCT3933U."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["dac", "driver", "embedded-hal", "embedded-hal-driver"]


[dependencies]
defmt = "0.3"
embedded-hal = "1.0.0"